# statoor

./: .gitignore  Makefile  README.md  go.mod
cmd/statoor/: main.go
harness/: build.go  harness.go  harness_test.go  result.go
harnesses/besu/: .gitignore  build.gradle  settings.gradle
harnesses/besu/src/main/java/io/github/statoor/besu/: Main.java
harnesses/erigon/: go.mod  go.sum  main.go
harnesses/ethrex/: Cargo.toml
harnesses/ethrex/src/: main.rs
harnesses/geth/: go.mod  go.sum  main.go
harnesses/nethermind/: Nethermind.Harness.csproj  Program.cs
harnesses/reth/: Cargo.toml
harnesses/reth/src/: main.rs
report/: report.go  report_test.go
workload/: workload.go  workload_test.go
